<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="128dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/gambar"
            android:layout_width="90dp"
            android:layout_height="120dp"
            android:layout_weight="0.5"
            android:adjustViewBounds="true"
            android:contentDescription="@string/gambar_jamur"
            android:scaleType="fitXY"
            tools:background="@tools:sample/backgrounds/scenic" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/namaLokal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Large Text"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <TextView
                    android:id="@+id/statusRacun"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="2.5dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="Medium Text"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/statusMakan"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="2.5dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="Medium Text"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kegunaan"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold"
            android:layout_marginTop="10dp" />

        <TextView
            android:id="@+id/kegunaan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textview" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/habitat"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold"
            android:layout_marginTop="10dp" />

        <TextView
            android:id="@+id/habitat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textview" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/warna"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold"
            android:layout_marginTop="10dp" />

        <TextView
            android:id="@+id/warna"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textview" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bentuk_payung"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold"
            android:layout_marginTop="10dp" />

        <TextView
            android:id="@+id/bentukPayung"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textview" />


</LinearLayout>